# pairwise_msd

./: .gitignore  CMakeLists.txt  README.md
include/: pairwise_msd.h  result_control.h  textbook_msd.h  twoway_msd.h
src/: main.c  pairwise_msd.c  result_control.c  textbook_msd.c  twoway_msd.c
